# async-runtimes-benchmarks

./: .gitignore  Makefile  benchmark.sh  generate_table.py  go.work  preparejson.sh  process_json.py  processjson.py  processjson.sh
archive/: preparejson.sh  processjson.sh
dotnet/runningStat/net7/: Program.cs  RunningStat.cs
go/: running_stat.go
go/hash/: go.mod  main.go
go/running_stat/: go.mod  main.go
java/hash/: Threads.java  VirtualThreads.java
java/stat/: RunningStat.java  Threads.java  VirtualThreads.java
rust/: Cargo.toml
rust/hash_message/: Cargo.toml
rust/hash_mutex/: Cargo.toml
rust/src/: lib.rs
rust/stat_message/: Cargo.toml
rust/stat_message/src/: running_stat.rs
rust/stat_mutex/: Cargo.toml
